<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Fragments.RDE.RDESettingsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rde_setup"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSelectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08029197" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92214113" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/startImageButton"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:src="@drawable/start_button"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMid"
        app:layout_constraintRight_toRightOf="@id/guidelineRight" />


    <ImageView
        android:id="@+id/startFreeDriveButton"
        android:layout_width="149dp"
        android:layout_height="76dp"
        android:src="@drawable/free_drive"
        app:layout_constraintBottom_toTopOf="@id/guideline6"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineVerticalMid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <com.warkiz.widget.IndicatorSeekBar
        android:id="@+id/distanceSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:isb_max="100"
        app:isb_min="48"
        app:isb_progress="83"
        app:isb_seek_smoothly="true"
        app:isb_show_indicator="none"
        app:isb_thumb_color="@color/darkBlue"
        app:isb_thumb_size="20dp"
        app:isb_tick_marks_size="25dp"
        app:isb_track_background_size="2dp"
        app:isb_track_progress_color="@color/darkGrey"
        app:isb_track_progress_size="3dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineSeekBar"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight" />

    <TextView
        android:id="@+id/textViewDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="83 km"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineButtons"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineRight" />

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance:"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineSelectText"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewCarInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Car Info"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineCarInfo"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSpeedTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Speed:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineSpeedTemp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Temperature:"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineSpeedTemp"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMid" />

    <ImageView
        android:id="@+id/imageViewSpeed"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/bt_connected"
        app:layout_constraintBottom_toTopOf="@id/guidelineSpeedTemp"
        app:layout_constraintLeft_toRightOf="@id/textViewSpeed" />

    <ImageView
        android:id="@+id/imageViewTemp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/bt_connected"
        app:layout_constraintBottom_toTopOf="@id/guidelineSpeedTemp"
        app:layout_constraintLeft_toRightOf="@id/textViewTemp" />

    <ImageView
        android:id="@+id/imageViewGPS"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/bt_connected"
        app:layout_constraintBottom_toTopOf="@id/guidelineGPS"
        app:layout_constraintLeft_toRightOf="@id/textViewGPS"
        android:visibility="invisible"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNoxCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <TextView
        android:id="@+id/textViewNoxCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="NOₓ Calculation:"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineNoxCalc"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/textViewNoxCalc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="None"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineNoxCalc"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <TextView
        android:id="@+id/textViewGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="GPS:"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineGPS"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/textViewGPSinit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="initializing..."
        android:textColor="@color/lighGrey"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineGPS"
        app:layout_constraintLeft_toRightOf="@id/textViewGPS" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNOXSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textViewNOXSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="NOₓ Sensor:"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineNOXSensor"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <TextView
        android:id="@+id/textViewNOXSensorInit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="warming up..."
        android:textColor="@color/lighGrey"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineNOXSensor"
        app:layout_constraintLeft_toRightOf="@id/textViewNOXSensor" />

    <TextView
        android:id="@+id/textViewConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Config"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/guidelineConfig"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineNoxSensorSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.66" />

    <TextView
        android:id="@+id/textViewNoxSensorSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOₓ Sensor:"
        android:textSize="18dp"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineNoxSensorSelect"
        app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/guidelineVerticalMid"
        app:layout_constraintRight_toRightOf="@id/guidelineRight"
        app:layout_constraintBottom_toBottomOf="@id/guidelineNoxSensorSelect"/>


</androidx.constraintlayout.widget.ConstraintLayout>