...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/rdeImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_action_car"
        app:layout_constraintBottom_toBottomOf="@id/guideLineButtonsLower1"
        app:layout_constraintLeft_toLeftOf="@id/guideLineLeft"
        app:layout_constraintRight_toRightOf="@id/guidelineVerticalMid"
        app:layout_constraintTop_toTopOf="@id/guideLineButtonsUpper1"
        app:tint="@color/homeIcon" />

    <ImageView
        android:id="@+id/monitoringImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        android:src="@drawable/monitoring_icon"
        app:layout_constraintBottom_toBottomOf="@id/guideLineButtonsLower1"
...
