...
        app:layout_constraintTop_toTopOf="@id/guideline26"
        app:rcBackgroundColor="@color/lighGrey"
        app:rcProgressColor="@color/greenColor" />


    <TextView
        android:id="@+id/textViewValidRDE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="Valid RDE Trip : "
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/guideline26"
...
