...
    <string name="send">Send</string>
    <string name="receive">receive</string>
    <string name="textview">TextView</string>
    <string name="elm_command">ELM Command</string>
    <string name="textviewspeedobd">TextView</string>
    <string name="textviewrpmobd">TextView</string>
    <string name="startMonitoring">Start Monitoring</string>
    <string name="home">Home</string>
    <string name="tracking">Live Monitoring</string>
    <string name="headerpic">HeaderPic</string>
    <string name="headertext">  LolaDrives</string>
    <string name="open">open</string>
    <string name="close">close</string>
...
